--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,27 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"a11y": {
+				"useButtonType": "off",
+				"noSvgWithoutTitle": "off",
+				"noStaticElementInteractions": "off",
+				"useKeyWithClickEvents": "off"
+			},
+			"suspicious": {
+				"noArrayIndexKey": "off",
+				"noExplicitAny": "warn"
+			},
+			"correctness": {
+				"noUnusedFunctionParameters": "off",
+				"noUnusedImports": "warn",
+				"noUnusedVariables": "warn",
+				"useExhaustiveDependencies": "warn",
+				"useUniqueElementIds": "warn",
+				"noNestedComponentDefinitions": "warn",
+				"noChildrenProp": "warn",
+				"noInvalidUseBeforeDeclaration": "warn"
+			}
 		}
 	},
 	"javascript": {
