fix: correct CI workflow format check command
🔧 CI Workflow Fixes:
- Fixed format check: removed invalid --write=false flag
- Simplified lint job: use 'npm run check' for both lint + format
- Auto-formatted files with biome

✅ Verified:
- npm run check: PASS (25 warnings)
- npm run build: PASS
- npm run lint: PASS

This resolves the GitHub Actions CI error:
'Error: `false` is not expected in this context'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Biome lint
-        run: npm run lint
-
-      - name: Run Biome format check
-        run: npm run format -- --write=false
+      - name: Run Biome check (lint + format)
+        run: npm run check
 
   build:
     name: Build Test
