--- a/vercel.json
+++ b/vercel.json
@@ -29,7 +29,13 @@
       ]
     },
     {
-      "source": "/:path(.*\\.(js|css|woff|woff2|ttf|eot|svg)$)",
+      "source": "/_next/static/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/public/(.*)",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
