feat: add Vercel Analytics and optimize logo to WebP
- Add @vercel/analytics package and Analytics component to track page views
- Convert logo-renoz.png to WebP format (1119KB -> 19.67KB, 98.2% reduction)
- Update all logo references from PNG to WebP in emails, metadata, and service worker
- Fixes massive data transfer issue (2MB outgoing per logo request)
- Add logo optimization script for future use

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "optimize:logo": "node scripts/optimize-logo.mjs"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
@@ -34,6 +35,7 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@tanstack/zod-form-adapter": "^0.42.1",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
