Fix TypeScript errors and improve code quality
- Add Zod input validation to ServerFn handlers (submitInquiry, submitWarranty, uploadWarrantyFiles)
- Fix unused props in Card component by spreading to motion.div
- Remove unused dev tool imports from __root.tsx
- Fix implicit any types with explicit type annotations
- Update installer page wording: 'assembly line' → 'workshop'
- Clean up unused type declarations and imports
- Resolve route path type issues in case studies

--- a/package.json
+++ b/package.json
@@ -69,5 +69,15 @@
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
+  },
+  "overrides": {
+    "html-to-text": {
+      "htmlparser2": {
+        "entities": "^4.5.0"
+      }
+    }
+  },
+  "resolutions": {
+    "html-to-text/htmlparser2/entities": "^4.5.0"
   }
 }
