--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,17 @@ dist
 dist-ssr
 *.local
 count.txt
+# Environment variables
 .env
+.env.local
+.env.production
+.env.*.local
+.env copy
+.env.backup
+.env.bak
+.env-*
+*.env
+
 .nitro
 .tanstack
 .wrangler
