--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "functions": {
-    "dist/server/**/*.js": {
-      "runtime": "@vercel/node@18"
-    }
-  }
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
 
