fix: configure vercel.json for TanStack Start SSR deployment
- Remove SPA rewrites (not needed for SSR)
- Add functions config for Vercel Node.js runtime
- Configure server/**/*.js files to use @vercel/node runtime
- This enables proper SSR routing and API handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "functions": {
+    "dist/server/**/*.js": {
+      "runtime": "@vercel/node"
     }
-  ]
+  }
 }
 
