--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "dist/server/**/*.js": {
-      "runtime": "@vercel/node"
+      "runtime": "@vercel/node@20"
     }
   }
 }
