--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "functions": {
-    "dist/server/**/*.js": {
+    "dist/server/**/*.mjs": {
       "runtime": "nodejs20.x"
     }
   }
