fix: properly configure TanStack Start application
- Add missing app.config.ts for TanStack Start configuration
- Update package.json scripts to use TanStack CLI commands
- Remove SPA rewrites from vercel.json (SSR handles routing)
- Fix missing app.config.ts that was causing 404 errors

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "tanstack start dev --port 3000",
+    "build": "tanstack start build",
+    "preview": "tanstack start preview",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "format": "biome format",
